--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(31, 31, 34, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
@@ -24,8 +24,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  background-image: url("./assets/pokemonBackground.webp");
+  background-position: center;
+  background-size: cover;
   min-width: 320px;
   min-height: 100vh;
 }
